tests/ui/for_loop.ml
let entrypoint _ = for i = 1 to 10 do () done
